# preflight

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md
.instructions/: global.md
.instructions/agents/: architect.md  auditor.md  compiler.md  orchestrator.md  sanitiser.md  scribe.md  tracker.md
benchmarks/: auto_rephrasings.csv  auto_rephrasings_results.csv  classifier_baseline.py  eval_auto_corpus.py  evasion_study.py  generate_evasion_corpus.py  layered_prototype.py  rephrasings.csv
benchmarks/nemo/: benchmark_nemo.py  benchmark_nemo_scaling.py  nemo_evasion.py
benchmarks/nemo/config/: config.yml  rails.co
benchmarks/nemo/config_50/: config.yml  rails.co
benchmarks/v2/: cost_model.py
benchmarks/v2/ablation/: ablation_six_boundary.py  two_phase_ablation.py
benchmarks/v2/external_boundaries/llm06/: README.md  auto_rephrasings_llm06.csv  auto_rephrasings_llm06_results.csv  boundary-006.yaml  generate_prompt_diff.md  inspect_corpus.py  setfit_training_diff.md
benchmarks/v2/safe_corpus/: dolly_500.csv  safe_fpr.py
benchmarks/v2/setfit/: eval_boundary_holdout.py  eval_dolly500.py  train_setfit.py
crates/compiler/: Cargo.toml
crates/compiler/src/: contradiction.rs  lib.rs  main.rs  manifest.rs  parser.rs  validator.rs
crates/kernel/: Cargo.toml
crates/kernel/benches/: pure_eval_bench.rs
crates/kernel/src/: lib.rs  loader.rs  logger.rs  main.rs  policy.rs  roles.rs  router.rs
crates/kernel/tests/: audit_log.rs  benchmark_enforcement.rs  benchmark_scaling.rs  integration_compile_and_route.rs
crates/limitations/: Cargo.toml
crates/limitations/src/: lib.rs  linker.rs  main.rs  registry.rs  resolver.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: client.rs  executor.rs  lib.rs  main.rs
crates/runtime/tests/: benchmark_real_llm.rs  integration_llm_runtime.rs  integration_semantic.rs
crates/sanitiser/: Cargo.toml
crates/sanitiser/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: boundary.rs  contract.rs  error.rs  instruction.rs  lib.rs  task.rs
paper/: paper.tex
paper/v2_results/: ablation_six_boundary.json
paper/v2_results/ablation/: results.json
paper/v2_results/cost_model/: results.json
paper/v2_results/llm_binary/: results_20260411_144214.json  results_20260411_152708.json  results_50prompts_baseline.json
paper/v2_results/safe_corpus/: results.json
paper/v2_results/setfit/: boundary_holdout.json  dolly_500.json  results.json
