[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/compiler",
    "crates/kernel",
    "crates/limitations",
    "crates/sanitiser",
    "crates/runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
