[package]
name = "ai-os-limitations"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ai-os-limitations"
path = "src/main.rs"

[dependencies]
ai-os-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
